# SurEVirus

./: .gitignore  CMakeLists.txt  README.md  Version.txt  VersionNotes.txt  adjustCoverage.awk  build_region-reads_associations.cpp  cluster_junctions.cpp  config.h  edge_mapper.cpp  enumerate_edges.awk  exportlib.sh  extractEdgeReads.awk  extract_clips.cpp  extract_regions.cpp  htslib-1.21  isolate_relevant_pairs_fq.cpp  max_is_calc.py  random_pos_generator.py  reads_categorizer.cpp  remapper.cpp  sam_utils.h  surveyor  surveyor.py  utils.h
libs/: max_is_calc.py
src/: BranchedQueue.h  bamaddX2.cpp  cleanbam.cpp  cluster_junctions.cpp  config.h  edge_mapper.cpp  edge_utils.h  enumerate_edges.cpp  extract_clips.cpp  extract_regions.cpp  filter.cpp  isolate_relevant_pairs.cpp  isolate_relevant_pairs_fq.cpp  sam_utils.h  str_utils.h  utils.h
util/: adjustCoverage.sh  build_libs.sh  edge2edgeRegionBed.awk  ensurepairedbam.sh  enumerate_edges.awk  exportlib.sh  map_clips.sh  splitCallBed.awk
